--- a/BubblePop/Base.lproj/Main.storyboard
+++ b/BubblePop/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -68,14 +69,50 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qFY-9n-ihD" customClass="Bubble">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <rect key="frame" x="260" y="143" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I7C-bd-pFB">
+                                <rect key="frame" x="20" y="20" width="44" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UnY-ly-NHZ">
+                                <rect key="frame" x="20" y="49" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HZv-i8-zWf">
+                                <rect key="frame" x="535" y="20" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTf-Mv-nQ7">
+                                <rect key="frame" x="538" y="49" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UnY-ly-NHZ" firstAttribute="top" secondItem="I7C-bd-pFB" secondAttribute="bottom" constant="8" id="A31-Sy-V0s"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HZv-i8-zWf" secondAttribute="trailing" id="D8c-A7-xor"/>
+                            <constraint firstItem="HZv-i8-zWf" firstAttribute="top" secondItem="hIS-W0-CYC" secondAttribute="bottom" id="KYv-fi-LG3"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="I7C-bd-pFB" secondAttribute="leading" id="TPE-v5-vog"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dTf-Mv-nQ7" secondAttribute="trailing" id="YIG-sA-5Lf"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="UnY-ly-NHZ" secondAttribute="leading" id="lJ6-CH-xGx"/>
+                            <constraint firstItem="I7C-bd-pFB" firstAttribute="top" secondItem="hIS-W0-CYC" secondAttribute="bottom" id="rTI-K3-gsO"/>
+                            <constraint firstItem="dTf-Mv-nQ7" firstAttribute="top" secondItem="HZv-i8-zWf" secondAttribute="bottom" constant="8" id="sEB-q8-tcQ"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="bubble" destination="qFY-9n-ihD" id="08M-uZ-LqT"/>
+                        <outlet property="scoreLabel" destination="dTf-Mv-nQ7" id="zVI-MV-IEv"/>
+                        <outlet property="timerLabel" destination="UnY-ly-NHZ" id="pYC-0V-fBh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kbk-2V-qeH" userLabel="First Responder" sceneMemberID="firstResponder"/>
