--- a/BubblePop/Base.lproj/Main.storyboard
+++ b/BubblePop/Base.lproj/Main.storyboard
@@ -151,13 +151,21 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOX-l0-nxG">
+                                <rect key="frame" x="300.5" y="300.5" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="UnY-ly-NHZ" firstAttribute="top" secondItem="I7C-bd-pFB" secondAttribute="bottom" constant="8" id="A31-Sy-V0s"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HZv-i8-zWf" secondAttribute="trailing" id="D8c-A7-xor"/>
                             <constraint firstItem="HZv-i8-zWf" firstAttribute="top" secondItem="hIS-W0-CYC" secondAttribute="bottom" id="KYv-fi-LG3"/>
+                            <constraint firstItem="bOX-l0-nxG" firstAttribute="centerY" secondItem="k7B-wF-bwH" secondAttribute="centerY" id="NV1-MV-lHf"/>
                             <constraint firstAttribute="leadingMargin" secondItem="I7C-bd-pFB" secondAttribute="leading" id="TPE-v5-vog"/>
+                            <constraint firstItem="bOX-l0-nxG" firstAttribute="centerX" secondItem="k7B-wF-bwH" secondAttribute="centerX" id="X2e-9x-y62"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dTf-Mv-nQ7" secondAttribute="trailing" id="YIG-sA-5Lf"/>
                             <constraint firstAttribute="leadingMargin" secondItem="UnY-ly-NHZ" secondAttribute="leading" id="lJ6-CH-xGx"/>
                             <constraint firstItem="I7C-bd-pFB" firstAttribute="top" secondItem="hIS-W0-CYC" secondAttribute="bottom" id="rTI-K3-gsO"/>
@@ -165,6 +173,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="countDownLabel" destination="bOX-l0-nxG" id="0uo-wQ-0Fd"/>
                         <outlet property="scoreLabel" destination="dTf-Mv-nQ7" id="zVI-MV-IEv"/>
                         <outlet property="timerLabel" destination="UnY-ly-NHZ" id="pYC-0V-fBh"/>
                     </connections>
